feat: Enhance Milkdown editor integration and error handling
- Updated Milkdown editor import to default export for consistency.
- Added MilkdownErrorBoundary component to handle editor errors gracefully.
- Implemented lazy loading for the MilkdownEditor component.
- Improved LensSelector styling for better UI consistency.
- Refactored DocumentEditor to include error boundary and loading states.
- Enhanced document upload flow with demo document creation from drag-and-drop.
- Updated document store to support demo document generation.
- Added test documents for upload flow and Milkdown integration verification.
- Improved CSS variables for light and dark themes in Milkdown editor styles.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Note: Cheltenham is a proprietary NY Times font. Using Georgia as fallback serif font. 
+         For production, consider licensing Cheltenham or using a similar serif like Playfair Display or Lora -->
   </head>
   <body>
     <div id="root"></div>
